# Squadmakers

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/controllers/: API_solicitud.py
app/data/: data_chistes.py
app/models/: model_chistes.py
app/routers/: chistes.py  matematicas.py
project/: main.py
project/apps/chistes/: controllers.py  models.py  routes.py
project/apps/chistes/tests/: test_model.py  test_routes.py
project/apps/matematicas/: controllers.py  routes.py
project/apps/matematicas/tests/: test_matematicas.py
project/common/: API_solicitud.py
tests/: test_chistes.py  test_matematicas.py  test_model_chistes.py
