[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Esteban Acevedo", email = "esteban.horacio.acevedo@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.95.1",
    "sqlmodel>=0.0.8",
    "requests>=2.28.2",
    "pytest>=7.3.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}
